# PX4-Simulation

./: .gitignore
flight_paths/: example.csv  flight.csv
src/px4_msgs/msg/: Test.msg
src/px4_ros_com/: CMakeLists.txt  package.xml
src/px4_ros_com/px4_ros_com/: csv_writer.py  pressure_sensor_node.py
src/px4_ros_com/scripts/: csv_writer.py  pressure_sensor.py
src/px4_ros_com/src/examples/models/: Quadcopter.stl:Zone.Identifier
src/px4_ros_com/src/examples/offboard/: gui_window.cpp  gui_window.h  offboard_control.cpp  offboard_control1.cpp  offboard_control_no_delta.cpp  offboard_motor.cpp  offboard_motor1.cpp  point_publish.cpp  point_publish_old.cpp  point_publish_ui.cpp
src/px4_ros_com/src/examples/traj_plot/: drone_position_plotter.cpp
